apps/staging/plants/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plants
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-letsencrypt-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: plants.holovko.org
      http:
        paths:
          - backend:
              service:
                name: hortusfox-web
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - plants.holovko.org
    secretName: plants-cf-letsencrypt-cert
